You forgot \!important on the iframe code, though you used it for width and height.  You should rarely use important, but this is a good use of it because Twitter is specifying position/width/height/etc directly on the element, which is more specific than CSS.  But using important says 'hey, I'm actually more specific'

--- a/css/main.css
+++ b/css/main.css
@@ -120,12 +120,9 @@ header {
 .weather-info-icon {
 	float: left;
 }
-iframe[id^='twitter-widget-0']{position: absolute; top: 50%; bottom:50% !important}
+iframe[id^='twitter-widget-0']{position: absolute !important; top: 50%; bottom:50% !important}
 iframe[id^='twitter-widget-0']{width: 220px !important;}
 iframe[id^='twitter-widget-0']{height: 200px !important;}
-iframe[id^='twitter-widget-0']{!important}\
-iframe[id^='twitter-widget-']{}
-
 
 footer {
    position:absolute;
