--- a/css/main.css
+++ b/css/main.css
@@ -120,17 +120,17 @@ header {
 .weather-info-icon {
 	float: left;
 }
-iframe[id^='twitter-widget-0']{position: absolute; top: 50%; bottom:50% !important}
-iframe[id^='twitter-widget-0']{width: 220px !important;}
+iframe[id^='twitter-widget-0']{position: absolute !important; bottom: 0% !important}
+iframe[id^='twitter-widget-0']{width: 240px !important;}
 iframe[id^='twitter-widget-0']{height: 200px !important;}
-iframe[id^='twitter-widget-0']{!important}\
+iframe[id^='twitter-widget-0']{!important}
 iframe[id^='twitter-widget-']{}
 
 
 footer {
    position:absolute;
    bottom:0;
-   width:80%;
+   width:100%;
    height:60px;   /* Height of the footer */
    font-size: 30px;
    color: white;
@@ -138,6 +138,7 @@ footer {
 
 marquee {
 	padding-bottom: 30px;
+  padding-left: 300px
 }
 
 marquee span {
@@ -145,6 +146,6 @@ marquee span {
 	line-height: 0px;
 	position: relative;
 	top: 15px;
-	padding-left: 20px;
+	padding-left: 25px;
 	padding-right: 20px;
 }
