moved twitter to right and moved news to left

--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ header {
 .weather-info-icon {
 	float: left;
 }
-iframe[id^='twitter-widget-0']{position: absolute !important; bottom: 0% !important}
+iframe[id^='twitter-widget-0']{position: absolute !important; bottom: 0% !important; right: 0%}
 iframe[id^='twitter-widget-0']{width: 240px !important;}
 iframe[id^='twitter-widget-0']{height: 200px !important;}
 iframe[id^='twitter-widget-0']{!important}
